--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,48 @@ body {
     display: block;
 }
 
+nav {
+    position: relative;
+    top: 10px;
+    margin: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+#navbar-right {
+    display: flex;
+}
+
+#gmail-images {
+    margin-right: 20px;
+}
+
+a {
+    margin: 10px;
+}
+
+a:link, a:visited {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+#sign-in {
+    background-color: cornflowerblue;
+    color: white;
+    padding: 10px;
+    border-radius: 10%;
+    margin-left: 15px;
+}
+
+#apps-logo {
+    width: 15px;
+    height: auto;
+}
+
 #logo {
     display: flex;
     margin-top: 130px;
