--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,29 @@ nav {
     margin-right: 20px;
 }
 
+footer {
+    position: absolute;
+    width: 100%;
+    bottom: 0px;
+    left: 0;
+    display: flex;
+    justify-content: space-between;
+    background-color: rgba(218, 214, 214, 0.945);
+    padding: 15px;
+}
+
+#settings {
+    margin-right: 35px;
+}
+
+#footer-left {
+    float: left;
+}
+
+#footer-right {
+    float: right;
+}
+
 a {
     margin: 10px;
 }
@@ -81,7 +104,7 @@ a:hover {
     width: 475px;
     display: flex;
     justify-content:center;
-    border: 1px solid rgba(177, 177, 177, 0.452);
+    border: 1px solid rgba(194, 194, 194, 0.603);
     border-radius: 50px;
     padding: 10px;
 }
